docs/tests/nameres/expressions/valid/ChannelCustomType.src
// Valid

type ID = int;
let int x = 1;

let chan<ID> idChan;